--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Muli:wght@400;700;900&display=swap");
 
 .nav-link {
   color: white !important;
@@ -9,6 +10,8 @@
   position: fixed;
   top: 0;
   width: 100%;
+  font-family: "Ubuntu", sans-serif;
+  z-index: 1;
 }
 
 .footer {
@@ -18,4 +21,53 @@
   width: 100%;
   color: white;
   text-align: center;
+  font-family: "Ubuntu", sans-serif;
+}
+
+.container-main {
+  margin-top: 100px !important;
+  margin-left: 15%;
+  margin-right: 20%;
+}
+
+.container-secondary {
+  margin-bottom: 50px;
+  padding: 10px;
+}
+.main-functions {
+  margin: 15px;
+  box-shadow: 5px 7px 5px rgba(100, 0, 0, 0.5);
+  transition: box-shadow 0.5s;
+  font-family: "Muli", sans-serif;
+  font-weight: 700;
+  min-height: 350px;
+}
+h4 {
+  font-family: "Muli", sans-serif;
+  font-size: 30px;
+}
+h5 {
+  padding: 10px;
+  font-weight: 900;
+}
+
+img {
+  padding-top: 10px;
+  padding-left: 30%;
+}
+
+.main-functions:hover {
+  box-shadow: 5px 7px 20px rgba(200, 0, 0, 0.5);
+}
+
+.comp-chart {
+  border: 1px solid black;
+  font-family: "Muli", sans-serif;
+  font-size: 20px;
+  text-align: center;
+}
+
+.about-us {
+  text-align: center;
+  min-height: 10px;
 }
