--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -4,7 +4,9 @@
 .nav-link {
     color: white !important;
 }
-
+.logo {
+    border-radius: 100%;
+}
 .navbar {
     overflow: hidden;
     position: fixed;
@@ -88,19 +90,20 @@ img {
 
 .map {
     margin-top: 170px;
-    margin-left: auto;
-    margin-right: auto;
-    width: fit-content;
-    border: 3px solid black;
+    /* margin-left: auto;
+    margin-right: auto; 
+    width: fit-content; */
+    /* border: 3px solid black; */
+    margin-right: 150px;
     display: block;
-    padding: 5px;
+    padding: 15px;
 }
 
 .contact-info {
-    float: left;
-    margin-top: 120px;
+    margin-top: 350px;
+    /* float: left;   
     padding: 150px;
-    display: inline-block;
+    display: inline-block; */
 }
 
 .youtube-video {
