--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -42,6 +42,7 @@
     font-family: "Muli", sans-serif;
     font-weight: 700;
     min-height: 500px;
+    border-radius: 10px;
 }
 .index-heading {
     font-family: "Muli", sans-serif;
